@@ -2,6 +2,8 @@ Mahout Change Log
 
 Release 1.0 - unreleased
 
+  MAHOUT-1578: Optimizations in matrix serialization (ssc)
+
   MAHOUT-1572: blockify() to detect (naively) the data sparsity in the loaded data (dlyubimov)
 
   MAHOUT-1571: Functional Views are not serialized as dense/sparse correctly (dlyubimov)
